# geoj

./: Cargo.toml
assets/: compressed.aggressive.geojson  compressed.max.geojson  visualize.html
src/: compress.rs  countries.rs  geojson.rs  main.rs  shapes.rs  simplification.rs
src/handlers/: get_countries.rs  get_country_geojson.rs  mod.rs
