[package]
name = "geoj"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
axum = "0.7.7"
geo = { version = "0.28.0", features = ["serde"] }
geojson = "0.24.1"
serde = "1.0.210"
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
axum-response-cache = "0.1.1"
tower-http = { version = "0.6.1", features = ["fs"] }
strum = { version = "0.26.3", features = ["std", "derive", "strum_macros"] }
